# UDock2_linux

./: CMakeLists.txt  compile_macos.sh  ports.list  readme.md
imgui/: imgui_impl_sdl_gl3.cpp
include/: Atom.h  Camera-old.h  Camera.h  CameraTrans.h  ConstraintManager.h  Energy.h  FPScamera.h  Gamepad.h  MolecularHandler.h  Molecule.h  Transform.h  UI.h  billboardshader.h  docking_scene.h  enum_scene.h  gl3w.h  hasher3d.h  input.h  marching_cubes.h  mol2_io.h  motion.h  particles_emitter.h  pdb_io.h  pickupRay.h  render.h  render_utils.h  scene_data.h  shaders_utils.h  spaceship_controller.h  spaceship_input.h  spaceship_scene.h  surfaces.h  timer.h  udock-pasteque.txt
models/: cylinder-center.mtl  flame_centered.mtl  midShip4_centered.mtl  tf_centered.mtl
molecules/: 1.mol2  1P9M_A.mol2  1P9M_B.mol2  1P9M_C.mol2  2.mol2  3.mol2  4.mol2  cube.mol2
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
shaders/: constraint.fragment.glsl  constraint.vertex.glsl  expandPoint2Quad_text.geom.glsl  flat_color.fragment.glsl  flat_color.vertex.glsl  fragment.glsl  fragment_mesh.glsl  fragment_mesh_normal.glsl  line.fragment.glsl  line.vertex.glsl  mesh_normal_color.fragment.glsl  mesh_normal_color.vertex.glsl  screen.fragment.glsl  skybox.fragment.glsl  skybox.vertex.glsl  spaceship.fragment.glsl  spaceship.vertex.glsl  testRayMarching.glsl  textsphere_computed.frag.glsl  vertex.glsl  vertex_mesh.glsl  vertex_mesh_normal.glsl
src/: Atom.cpp  gl3w.c  main.cpp  marching_cubes.cpp
udock/: main.cpp
